--- a/foodster/recipes/templates/favorites.html
+++ b/foodster/recipes/templates/favorites.html
@@ -4,14 +4,10 @@
 {% load cache %}
 {% block title %}Избранное{% endblock %}
 
-
+{% block header %}Избранное{% endblock %}
 {% block content %}
-    {% include "includes/nav.html" %}
     <main class="main container">
-        <div class="main__header">
-            <h1 class="main__title">{% block header %}Избранное{% endblock %}</h1>
-            {% include "includes/tags.html" with path="favorite/" %}
-        </div>
+        
         <div class="card-list">
             {% for item in page %}
                 {% include "includes/item_card.html" with item=item %}
