--- a/foodster/recipes/templates/follow.html
+++ b/foodster/recipes/templates/follow.html
@@ -3,15 +3,11 @@
 {% load static %}
 {% load cache %}
 {% block title %}Подписки{% endblock %}
-
+{% block header %}Подписки{% endblock %}
 
 {% block content %}
-    {% include "includes/nav.html"  %}
     <main class="main container">
-        <div class="main__header">
-            <h1 class="main__title">{% block header %}Подписки{% endblock %}</h1>
-            {% include "includes/tags.html" with path="follow/"%}
-        </div>
+        
         <div class="card-list">
             {% for item in page %}
                 {% include "includes/item_card.html" with item=item %}
