--- a/foodster/recipes/templates/includes/follow_button.html
+++ b/foodster/recipes/templates/includes/follow_button.html
@@ -1,5 +1,7 @@
-
-    {% if following %}
+{% load sub_funcs %}
+{% if user.is_authenticated %}
+    {% followed request.user author as follow %}
+    {% if follow %}
         <a href="{% url 'profile_unfollow' author.username %}">
             <button  class="button button_style_light-blue button_size_subscribe"
                 name="subscribe" data-out="true">
@@ -14,3 +16,11 @@
             </button>
         </a>
     {% endif %}
+{% else %}
+    <a href="{% url "login" %}">
+        <button class="button button_style_light-blue
+            button_size_subscribe" name="subscribe_not_logged" data-out="true">
+            Подписаться
+        </button>
+    </a>
+{% endif %}
