--- a/foodster/users/templates/registration/login.html
+++ b/foodster/users/templates/registration/login.html
@@ -3,35 +3,19 @@
 {% load static %}
 {% block main_css %}/static/pages/form.css{% endblock %}
 {% block title %}Log in{% endblock %}
+
+{% block header %}Войти{% endblock %}
 {% block content %}
-    {% include 'includes/nav.html'  with login=True %}
     <main class="main container">
 
-        <div class="main__header">
-            <h1 class="main__title">Войти</h1>
-        </div>
+        
         <div class="form-container">
 
             <form class="form" method="post" action="{% url 'login' %}">
 
                 {% csrf_token %}
-                <div class="form__group">
-                    <label for="{{ form.username.id_for_label }}" class="form__label">Имя пользователя</label>
-                    <div class="form__field-group">
-                        {{ form.username|addclass:"form__input" }}
-
-                        <span class="form__error">{{ form.username.errors }}</span>
-                    </div>
-                </div>
-                <div class="form__group">
-                    <label for="{{ form.password.id_for_label }}"
-                           class="form__label">Password</label>
-                    <div class="form__field-group">
-                        {{ form.password|addclass:"form__input" }}
-
-                        <span class="form__error">{% if form.errors %}Невозможно войти. Проверьте имя пользователя или пароль.{% endif %}</span>
-                    </div>
-                </div>
+                
+                {% include 'includes/user_form.html' %}
                 <div class="form__footer">
                     <button class="button button_style_blue">Войти</button>
                     <a href="{% url "password_reset" %}" class="form__forgot-link">Восстановить пароль</a>
