--- a/foodster/users/templates/registration/password_change_done.html
+++ b/foodster/users/templates/registration/password_change_done.html
@@ -3,19 +3,6 @@
 {% load static %}
 {% block main_css %}/static/pages/form.css{% endblock %}
 {% block title %}Password is changed{% endblock %}
-
+{% block header %}Пароль успешно изменен{% endblock %}
 {% block content %}
-    {% include 'includes/nav.html'  with password_change=True %}
-    <main class="main container">
-
-        <div class="custom-center-block">
-            <div class="main__header">
-                <h1 class="main__title">Пароль успешно изменен</h1>
-            </div>
-            
-        </div>
-    </main>
-
-
-
 {% endblock %}
