--- a/foodster/recipes/templates/includes/item_card.html
+++ b/foodster/recipes/templates/includes/item_card.html
@@ -5,7 +5,7 @@
 {% csrf_token %}
 <div class="card" data-id="{{ item.id }}">
     <a href="{% url "single" item.id %}" class="link" target="_blank"><img
-            src="{% if item.image %}{{ item.image.url }}{% else %}/static/nophoto.jpg{% endif %}"
+            src="{{ item.image.url }}"
             alt="{{ item.name }}"
             class="card__image"></a>
     <div class="card__body">
@@ -30,18 +30,6 @@
     <div class="card__footer">
 
         {% include "includes/add_to_cart.html" %}
-        {% if user.is_authenticated %}
-            <button class="button button_style_none" name="favorites"
-                    {% if not favorite %}data-out="true"{% endif %}><span
-                    class="icon-favorite {% if favorite %}icon-favorite_active{% endif %}"></span>
-            </button>
-        {% else %}
-
-            <a href="{% url "login" %}">
-
-                <button class="button button_style_none" name="favorites"
-                        data-out><span class="icon-favorite"></span></button>
-            </a>
-        {% endif %}
+        {% include "includes/add_to_favorites.html" %}
     </div>
 </div>
