--- a/foodster/users/templates/registration/password_change_form.html
+++ b/foodster/users/templates/registration/password_change_form.html
@@ -3,40 +3,15 @@
 {% load static %}
 {% block main_css %}/static/pages/form.css{% endblock %}
 {% block title %}Изменить пароль{% endblock %}
+{% block header %}Изменить пароль{% endblock %}
 {% block content %}
-    {% include 'includes/nav.html'  with password_change=True %}
     <main class="main container">
-        <div class="main__header">
-            <h1 class="main__title">Изменить пароль</h1>
-        </div>
+        
         <div class="form-container">
             <form class="form" method="post">
                 {% csrf_token %}
-                <div class="form__group">
-                    <label for="id_oldPassword" class="form__label">Старый пароль</label>
-                    <div class="form__field-group">
-                        <input type="password" name="old_password" id="id_oldPassword" class="form__input">
-                        <span class="form__error">{% if "old_password" in form.errors %}Неправильный старый пароль{% endif %}</span>
-                    </div>
-                </div>
-                <div class="form__group">
-                    <label for="id_newPassword" class="form__label">Новый пароль</label>
-                    <div class="form__field-group">
-                        <input type="password" name="new_password1" id="id_newPassword" class="form__input">
-                        <span class="form__input-info">*Ваш пароль не должен совпадать с вашим именем или другой персональной информацией или быть слишком похожим на неё.</span>
-                        <span class="form__input-info">*Ваш пароль должен содержать как минимум 8 символов.</span>
-                        <span class="form__input-info">*Ваш пароль не может быть одним из широко распространённых паролей.</span>
-                        <span class="form__input-info">*Ваш пароль не может состоять только из цифр.</span>
-                        <span class="form__error">{{ form.new_password1.error }}</span>
-                    </div>
-                </div>
-                <div class="form__group">
-                    <label for="id_confirmPassword" class="form__label">Подтверждение нового пароля</label>
-                    <div class="form__field-group">
-                        <input type="password" name="new_password2" id="id_confirmPassword" class="form__input">
-                        <span class="form__error">{% if "new_password2" in form.errors %}Пароли не совпадают или пароль слишком прост{% endif %}</span>
-                    </div>
-                </div>
+                {% include 'includes/user_form.html' %}
+
                 <div class="form__footer">
                     <button class="button button_style_blue">Изменить пароль</button>
                 </div>
