--- a/foodster/users/templates/signup.html
+++ b/foodster/users/templates/signup.html
@@ -3,62 +3,21 @@
 {% load static %}
 {% block main_css %}/static/pages/form.css{% endblock %}
 {% block title %}Зарегистрироваться{% endblock %}
+{% block header %}Регистрация{% endblock %}
+
 {% block content %}
     {% load user_filters %}
-    {% include "includes/nav.html" %}
     <main class="main container">
 
-        <div class="main__header">
-            <h1 class="main__title">Регистрация</h1>
-        </div>
+        
         <div class="form-container">
 
 
             <form class="form" method="post" action="{% url 'signup' %}">
 
                 {% csrf_token %}
-                <div class="form__group">
-                    <label for="id_first_name" class="form__label">Имя</label>
-                    <div class="form__field-group">
-                        <input type="text" name="first_name" id="id_first_name"
-                               class="form__input" value="{{ form.first_name.value|default_if_none:"" }}">
-                        <span class="form__error">{{ form.first_name.errors }}</span>
-                    </div>
-                </div>
-                <div class="form__group">
-                    <label for="id_username" class="form__label">Имя пользователя</label>
-                    <div class="form__field-group">
-                        <input type="text" name="username" id="id_username"
-                               class="form__input" value={{ form.username.value|default_if_none:"" }}>
-                        <span class="form__error">{{ form.username.errors }}
-                    </span>
-                    </div>
-                </div>
-                <div class="form__group">
-                    <label for="id_email" class="form__label">Email</label>
-                    <div class="form__field-group">
-                        <input type="email" name="email" id="id_email"
-                               class="form__input" value="{{ form.email.value|default_if_none:"" }}">
-                        <span class="form__error">{{ form.email.errors }}</span>
-                    </div>
-                </div>
-                <div class="form__group">
-                    <label for="id_password"
-                           class="form__label">Пароль</label>
-                    <div class="form__field-group">
-                        <input type="password" name="password1"
-                               id="id_password" class="form__input">
-                        <span class="form__error">{{ form.password1.errors }}</span>
-                    </div>
-                </div>
-                <div class="form__group">
-                    <label for="id_password" class="form__label">Подтверждение пароля</label>
-                    <div class="form__field-group">
-                        <input type="password" name="password2"
-                               id="id_password2" class="form__input">
-                        <span class="form__error">{{ form.password2.errors }}</span>
-                    </div>
-                </div>
+                
+                {% include 'includes/user_form.html' %}
                 <div class="form__footer">
                     <button class="button button_style_blue">Создать аккаунт
                     </button>
