--- a/foodster/recipes/templates/includes/tags.html
+++ b/foodster/recipes/templates/includes/tags.html
@@ -4,7 +4,7 @@
         <li class="tags__item">
             <a id="{{ tag.id }}"
                class="tags__checkbox tags__checkbox_style_{{ tag.color }}{% if tag.id in tags %} tags__checkbox_active{% endif %}"
-               href = "{% tags_filter request tag.id %}"
+               href="{{ request.path }}?{{ request|tags_filter:tag.id }}"
                ></a>
                
             <span class="tags__label">{{ tag.name }}</span>
