--- a/foodster/users/templates/registration/login.html
+++ b/foodster/users/templates/registration/login.html
@@ -4,7 +4,9 @@
 {% block main_css %}/static/pages/form.css{% endblock %}
 {% block title %}Log in{% endblock %}
 
-{% block header %}Войти{% endblock %}
+{% block header %}
+    <h1 class="main__title">Войти</h1>
+{% endblock %}
 {% block content %}
     <main class="main container">
 
