--- a/foodster/users/templates/registration/password_reset_form.html
+++ b/foodster/users/templates/registration/password_reset_form.html
@@ -2,18 +2,20 @@
 {% load user_filters %}
 {% load static %}
 {% block main_css %}/static/pages/form.css{% endblock %}
-{% block title %}Изменить пароль{% endblock %}
+{% block title %}Восстановить пароль пароль{% endblock %}
 {% block header %}
-    <h1 class="main__title">Изменить пароль</h1>
+    <h1 class="main__title">Восстановление пароля</h1>
 {% endblock %}
 {% block content %}
     <main class="main container">
+        
         <div class="form-container">
             <form class="form" method="post">
                 {% csrf_token %}
                 {% include 'includes/user_form.html' %}
+
                 <div class="form__footer">
-                    <button class="button button_style_blue">Изменить пароль</button>
+                    <button class="button button_style_blue">Сбросить пароль</button>
                 </div>
             </form>
         </div>
