--- a/foodster/recipes/templates/includes/add_to_favorites.html
+++ b/foodster/recipes/templates/includes/add_to_favorites.html
@@ -1,7 +1,8 @@
+{% load sub_funcs %}
 {% if user.is_authenticated %}
     <button class="button button_style_none" name="favorites"
-                    {% if not favorite %}data-out="true"{% endif %}><span
-                    class="icon-favorite {% if favorite %}icon-favorite_active{% endif %}"></span>
+                    {% if not request|is_favorite:item %}data-out="true"{% endif %}><span
+                    class="icon-favorite {% if request|is_favorite:item %}icon-favorite_active{% endif %}"></span>
     </button>
 {% else %}
     <a href="{% url "login" %}">
