--- a/foodster/recipes/templates/index.html
+++ b/foodster/recipes/templates/index.html
@@ -3,7 +3,10 @@
 {% load static %}
 {% load cache %}
 {% block title %}Все рецепты{% endblock %}
-{% block header %}Все рецепты{% endblock %}
+{% block header %}
+    <h1 class="main__title">Все рецепты</h1>
+    {% include "includes/tags.html"  %}
+{% endblock %}
 
 
 {% block content %}
