--- a/foodster/users/templates/registration/logged_out.html
+++ b/foodster/users/templates/registration/logged_out.html
@@ -3,6 +3,9 @@
 {% load static %}
 {% block main_css %}/static/pages/form.css{% endblock %}
 {% block title %}Logged out{% endblock %}
-{% block header %}Заходите еще{% endblock %}
+{% block header %}
+    <h1 class="main__title">Заходите еще</h1>
+{% endblock %}
 {% block content %}
+{# Макетов этих страниц нет на https://www.figma.com/file/HHEJ68zF1bCa7Dx8ZsGxFh/Продуктовый-помощник-Final?node-id=0%3A #}
 {% endblock %}
