--- a/foodster/users/templates/registration/password_change_done.html
+++ b/foodster/users/templates/registration/password_change_done.html
@@ -3,6 +3,8 @@
 {% load static %}
 {% block main_css %}/static/pages/form.css{% endblock %}
 {% block title %}Password is changed{% endblock %}
-{% block header %}Пароль успешно изменен{% endblock %}
+{% block header %}
+    <h1 class="main__title">Пароль успешно изменен</h1>
+{% endblock %}
 {% block content %}
 {% endblock %}
