--- a/foodster/users/templates/signup.html
+++ b/foodster/users/templates/signup.html
@@ -3,20 +3,16 @@
 {% load static %}
 {% block main_css %}/static/pages/form.css{% endblock %}
 {% block title %}Зарегистрироваться{% endblock %}
-{% block header %}Регистрация{% endblock %}
+{% block header %}
+    <h1 class="main__title">Регистрация</h1>
+{% endblock %}
 
 {% block content %}
     {% load user_filters %}
     <main class="main container">
-
-        
         <div class="form-container">
-
-
             <form class="form" method="post" action="{% url 'signup' %}">
-
                 {% csrf_token %}
-                
                 {% include 'includes/user_form.html' %}
                 <div class="form__footer">
                     <button class="button button_style_blue">Создать аккаунт
