--- a/foodster/recipes/templates/form_recipe.html
+++ b/foodster/recipes/templates/form_recipe.html
@@ -32,7 +32,7 @@
                                        id="id_tags_{{tag.id}}" value="{{tag.id}}"
                                        class="tags__checkbox tags__checkbox_style_{{tag.color}}"
                                        {% if tag.id in form.tags.value %}checked{% endif %}>
-                                <label for="id_tags_0" class="tags__label">{{tag.name}}</label>
+                                <label for="id_tags_{{tag.id}}" class="tags__label">{{tag.name}}</label>
                             </div>
                         {% endfor %}
                     </div>
