--- a/foodster/users/templates/registration/logged_out.html
+++ b/foodster/users/templates/registration/logged_out.html
@@ -4,8 +4,11 @@
 {% block main_css %}/static/pages/form.css{% endblock %}
 {% block title %}Logged out{% endblock %}
 {% block header %}
-    <h1 class="main__title">Заходите еще</h1>
+    <h1 class="main__title">Вы вышли из аккаунта</h1>
 {% endblock %}
 {% block content %}
 {# Макетов этих страниц нет на https://www.figma.com/file/HHEJ68zF1bCa7Dx8ZsGxFh/Продуктовый-помощник-Final?node-id=0%3A #}
+<li><span
+    >Заходите еще</span>
+</li>
 {% endblock %}
