--- a/foodster/recipes/templates/includes/add_to_favorites_big.html
+++ b/foodster/recipes/templates/includes/add_to_favorites_big.html
@@ -2,8 +2,8 @@
 {% is_favorite request recipe as favorite %}
 {% if user.is_authenticated %}
     <button class="button button_style_none" name="favorites"
-        {% if not favorite %}data-out = 'true'{% endif %}><span
-        class="icon-favorite icon-favorite_big {% if favorite %}icon-favorite_active{% endif %}"></span>
+        {% if not favorite %}data-out = 'true'{% endif %}>
+            <span class="icon-favorite icon-favorite_big {% if favorite %}icon-favorite_active{% endif %}"></span>
     </button>
     <div class="single-card__favorite-tooltip tooltip">
         {% if favorite %}
@@ -13,8 +13,7 @@
         {% endif %}
     </div>
 {% else %}
-    <button class="button button_style_none"
-        name="favorites"><span
-        class="icon-favorite icon-favorite_big "></span>
+    <button class="button button_style_none" name="favorites">
+        <span class="icon-favorite icon-favorite_big "></span>
     </button>
 {% endif %}
